tests/liquid/neg/list04-bad.js
/*@ hop :: (list [{v:number| 0 < v}] + null) => list [{v:number| 10 < v}]  + null */
function hop(xs){
  
  return xs;
}

